--- a/playbooks/create-InitializeMasterKubernetesNode.yml
+++ b/playbooks/create-InitializeMasterKubernetesNode.yml
@@ -20,13 +20,13 @@
      - name: Wait until the file /etc/kubernetes/admin.conf is present before continuing
        wait_for:
          path: /etc/kubernetes/admin.conf
-       sudo: true
-       sudo_user: kubernetes-host
+       #sudo: true
+       #sudo_user: kubernetes-host
 
      - name: Create kube directory 
        shell: mkdir -p $HOME/.kube
-       sudo: true
-       sudo_user: kubernetes-host
+       #sudo: true
+       #sudo_user: kubernetes-host
 
      - name: Change ownership of /etc/kubernetes so that the next step can copy a config file from it 
        shell: chown -R kubernetes-host:kubernetes-host /etc/kubernetes
@@ -35,20 +35,23 @@
 
      - name: copy admin_conf file into kube_config directory 
        shell: cp -i /etc/kubernetes/admin.conf $HOME/.kube/config 
-       sudo: true
-       sudo_user: kubernetes-host
+       #sudo: true
+       #sudo_user: kubernetes-host
 
      - name: Change ownership of kube_config file 
-       shell: chown $(id -u):$(id -g) $HOME/.kube/config 
-       sudo: true
-       sudo_user: kubernetes-host       
+       shell: chown kubernetes-host:kubernetes-host $HOME/.kube/config 
+       become: yes
+       become_user: root
+       #shell: chown $(id -u):$(id -g) $HOME/.kube/config 
+       #sudo: true
+       #sudo_user: kubernetes-host
 
      - name: Apply the RBAC config file to the cluster
        shell: kubectl apply -f https://docs.projectcalico.org/v3.3/getting-started/kubernetes/installation/hosted/rbac-kdd.yaml | tee kubeadm-rbac-kdd.out
-       sudo: true
-       sudo_user: kubernetes-host
+       #sudo: true
+       #sudo_user: kubernetes-host
 
      - name: Deploy a pod network to the cluster 
        shell: kubectl apply -f https://docs.projectcalico.org/v3.3/getting-started/kubernetes/installation/hosted/kubernetes-datastore/calico-networking/1.7/calico.yaml | tee kubeadm-calico.out
-       sudo: true
-       sudo_user: kubernetes-host       
+       #sudo: true
+       #sudo_user: kubernetes-host       
