--- a/playbooks/create-InitializeMasterKubernetesNode.yml
+++ b/playbooks/create-InitializeMasterKubernetesNode.yml
@@ -25,8 +25,15 @@
 
      - name: Create kube directory 
        shell: mkdir -p $HOME/.kube
+       become: yes
+       become_user: root  
        #sudo: true
        #sudo_user: kubernetes-host
+
+     - name: Change ownership of HOME/.kube
+       shell: chown -R kubernetes-host:kubernetes-host $HOME/.kube
+       become: yes
+       become_user: root
 
      - name: Change ownership of /etc/kubernetes so that the next step can copy a config file from it 
        shell: chown -R kubernetes-host:kubernetes-host /etc/kubernetes
