--- a/playbooks/create-InitializeMasterKubernetesNode.yml
+++ b/playbooks/create-InitializeMasterKubernetesNode.yml
@@ -54,12 +54,14 @@
        #sudo_user: kubernetes-host
 
      - name: Apply the RBAC config file to the cluster
-       shell: kubectl apply -f https://docs.projectcalico.org/v3.3/getting-started/kubernetes/installation/hosted/rbac-kdd.yaml | tee kubeadm-rbac-kdd.out
-       #shell: kubectl --insecure-skip-tls-verify apply -f ./rbac-kdd.yaml | tee kubeadm-rbac-kdd.out
+       #shell: kubectl apply -f https://docs.projectcalico.org/v3.3/getting-started/kubernetes/installation/hosted/rbac-kdd.yaml | tee kubeadm-rbac-kdd.out
+       #shell: kubectl --insecure-skip-tls-verify apply -f /home/kubernetes-host/pod-network-yaml/rbac-kdd.yaml | tee kubeadm-rbac-kdd.out
+       shell: kubectl apply -f /home/kubernetes-host/pod-network-yaml/rbac-kdd.yaml | tee kubeadm-rbac-kdd.out
        #sudo: true
        #sudo_user: kubernetes-host
 
      - name: Deploy a pod network to the cluster 
-       shell: kubectl apply -f https://docs.projectcalico.org/v3.3/getting-started/kubernetes/installation/hosted/kubernetes-datastore/calico-networking/1.7/calico.yaml | tee kubeadm-calico.out
+       #shell: kubectl apply -f https://docs.projectcalico.org/v3.3/getting-started/kubernetes/installation/hosted/kubernetes-datastore/calico-networking/1.7/calico.yaml | tee kubeadm-calico.out
+       shell: kubectl apply -f /home/kubernetes-host/pod-network-yaml/calico.yaml | tee kubeadm-calico.out
        #sudo: true
        #sudo_user: kubernetes-host
