--- a/playbooks/organizer-CreateKubernetesClusterInsideHostNetwork.yml
+++ b/playbooks/organizer-CreateKubernetesClusterInsideHostNetwork.yml
@@ -6,5 +6,5 @@
 ---
 - import_playbook: create-GenericProvisionKubernetesNodes.yml
 - import_playbook: create-InitializeMasterKubernetesNode.yml
-- import_playbook: create-InitializeWorkerKubernetesNodes.yml
-- import_playbook: create-ProvisionRemoteKubernetesAdminMachine.yml
+#- import_playbook: create-InitializeWorkerKubernetesNodes.yml
+#- import_playbook: create-ProvisionRemoteKubernetesAdminMachine.yml
