--- a/playbooks/organizer-CreateKubernetesClusterInsideHostNetwork.yml
+++ b/playbooks/organizer-CreateKubernetesClusterInsideHostNetwork.yml
@@ -1,10 +1,8 @@
 ## Copyright 2020 Green River IT as described in LICENSE.txt distributed with this project on GitHub.  
 ## Start at https://github.com/KubeHostNet/  
   
-# Run this file to create your Kubernetes Cluster. 
+# Run this file to create your Kubernetes Cluster. Note that additional playbooks will need to be run separately in order to complete the configuration of the cluster.
 # The following Playbooks are kept in separate files so that you can call them separately as part of other administration work after the cluster has been created. 
 ---
 - import_playbook: create-GenericProvisionKubernetesNodes.yml
 - import_playbook: create-InitializeMasterKubernetesNode.yml
-#- import_playbook: create-InitializeWorkerKubernetesNodes.yml
-#- import_playbook: create-ProvisionRemoteKubernetesAdminMachine.yml
