fix problems with calico

--- a/playbooks/organizer-CreateKubernetesClusterInsideHostNetwork.yml
+++ b/playbooks/organizer-CreateKubernetesClusterInsideHostNetwork.yml
@@ -6,3 +6,4 @@
 ---
 - import_playbook: create-GenericProvisionKubernetesNodes.yml
 - import_playbook: create-InitializeMasterKubernetesNode.yml
+- import_playbook: create-NetworkingOnMasterKubernetesNode.yml
