--- a/playbooks/create-NetworkingOnMasterKubernetesNode.yml
+++ b/playbooks/create-NetworkingOnMasterKubernetesNode.yml
@@ -5,16 +5,11 @@
 - name: Apply networking for Kubernetes cluster on a Master node 
   hosts: k8smaster
   remote_user: kubernetes-host
-  become: true
-  become_method: sudo
-  become_user: root
 
   tasks:  
 
      - name: Apply the RBAC config file to the cluster
-       shell: kubectl apply -f /home/kubernetes-host/pod-network-yaml/rbac-kdd.yaml | tee kubeadm-rbac-kdd.out
-       #kubectl apply -f pod-network-yaml/rbac-kdd.yaml | tee kubeadm-rbac-kdd.out
+       shell: kubectl apply -f /home/kubernetes-host/pod-network-yaml/rbac-kdd.yaml
 
      - name: Deploy a pod network to the cluster 
-       shell: kubectl apply -f /home/kubernetes-host/pod-network-yaml/calico.yaml | tee kubeadm-calico.out
-       #kubectl apply -f pod-network-yaml/calico.yaml | tee kubeadm-calico.out
+       shell: kubectl apply -f /home/kubernetes-host/pod-network-yaml/calico.yaml
