--- a/playbooks/organizer-CreateKubernetesClusterInsideHostNetwork.yml
+++ b/playbooks/organizer-CreateKubernetesClusterInsideHostNetwork.yml
@@ -7,3 +7,5 @@
 - import_playbook: create-GenericProvisionKubernetesNodes.yml
 - import_playbook: create-InitializeMasterKubernetesNode.yml
 - import_playbook: create-NetworkingOnMasterKubernetesNode.yml
+- import_playbook: create-InitializeWorkerKubernetesNodes.yml
+- import_playbook: create-ProvisionRemoteKubernetesAdminMachine.yml
